<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/portfolioNewFragment"
            android:icon="@drawable/ic_portfolio_add"
            android:title="@string/action_portfolio" />
        <item
            android:id="@+id/portfolioListFragment"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/action_portfolio_list" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/action_about" />
    </group>
    <item android:title="@string/group_map">
        <menu>
            <item
                android:id="@+id/projectsMapFragment"
                android:icon="@drawable/ic_projects_map"
                android:title="@string/action_map" />
            <item
                android:id="@+id/favouritesMapFragment"
                android:icon="@drawable/ic_project_favourites"
                android:title="@string/action_favourites" />
        </menu>
    </item>
    <item android:title="@string/theme_switch">
        <menu>
            <item
                android:id="@+id/lightMode"
                android:icon="@drawable/ic_light_mode"
                android:onClick="lightMode"
                android:title="@string/light_mode" />
            <item
                android:id="@+id/darkMode"
                android:icon="@drawable/ic_dark_mode"
                android:onClick="darkMode"
                android:title="@string/dark_mode" />
        </menu>
    </item>

    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>

