<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/item_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:iconTint="@color/colorPrimary"
        android:iconTintMode="multiply"
        android:title="@string/menu_cancelPortfolio"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_portfolio_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/portfolio_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_portfolio_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_portfolio_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_goToProjects"
        android:title="@string/button_goToProjects"
        app:showAsAction="never"/>


</menu>