<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_home"
        android:icon="@drawable/icon_home_white"
        android:title="@string/menu_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:iconTint="@color/colorPrimary"
        android:iconTintMode="multiply"
        android:title="@string/menu_cancelPortfolio"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_project_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/project_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/projectListFragment"
        android:orderInCategory="100"
        android:title="@string/action_project_list"
        app:showAsAction="never" />
</menu>