<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_border"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/splashImageView"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_margin="30dp"
        android:contentDescription="@string/splash_image"
        app:srcCompat="@drawable/house_design_image" />

    <TextView
        android:id="@+id/splashTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cinzel_decorative"
        android:gravity="center|center_horizontal|center_vertical"
        android:padding="30dp"
        android:text="@string/app_name"

        android:textColor="@color/colorTitles"
        android:textSize="48sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/splashProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:indeterminateTint="@color/colorButtons" />

    <TextView
        android:id="@+id/splashTextView1"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/designed_by"
        android:textColor="@color/colorSubTitles"
        android:textSize="24sp" />


</LinearLayout>